--- a/src/Pages/Settings/settings.css
+++ b/src/Pages/Settings/settings.css
@@ -46,6 +46,15 @@
   margin-left: 30px;
 }
 
+.logo {
+  display: block;
+  width: 200px;
+  margin: 0 auto;
+  margin-bottom: -50px;
+  margin-top: -100px;
+  margin-left: 150px;
+}
+
 @media only screen and (max-width: 700px) {
   .settings {
     max-width: 400px;
@@ -88,6 +97,12 @@
   .loader {
     margin-left: 110px;
   }
+
+  .logo {
+    margin: 0;
+    margin-left: 70px;
+    margin-bottom: -50px;
+  }
 }
 
 @media only screen and (max-width: 480px) {
@@ -115,7 +130,7 @@
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
   .links__list__item {
     width: 270px;
     margin-left: 5px;
